Fix too big input-sm
GSGMF-575

--- a/contribs/gmf/src/less/base.less
+++ b/contribs/gmf/src/less/base.less
@@ -40,6 +40,11 @@ a {
   padding: @padding-small-vertical @padding-small-horizontal;
 }
 
+.input-sm, select.input-sm {
+  height: inherit;
+  line-height: inherit;
+}
+
 i, cite, em, var, address, dfn {
   font-style: italic;
 }
